<resources>
    <string name="app_name">Curiosity</string>
    <!--Menu-->
    <string name="menu_home">Homepage</string>
    <string name="menu_settings">Impostazioni</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_topics">Aree di interesse</string>
    <string name="menu_statistics">Statistiche</string>
    <string name="nav_header_title">Menu</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <!--Homepage-->
    <string name="game_text">Sei molto curioso?</string>
    <string name="game_button_text">Gioca a Curiosity+</string>
    <string name="planet_description">Pianeta Marte</string>
    <!--Login-->
    <string name="login_title">Login</string>
    <string name="login_email">Indirizzo email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_register">Registrati</string>
    <string name="login_forgot_pass">Password dimenticata?</string>
    <string name="login_register_text">Non hai un account?</string>
    <!--Registration-->
    <string name="register_title">Registrazione</string>
    <string name="register_name">Inserisci nome</string>
    <string name="register_cognome">Inserisci cognome</string>
    <string name="register_email">Inserisci email</string>
    <string name="register_password">Inserisci password</string>
    <string name="register_button">Registrati</string>
    <string name="register_already">Hai già un account?</string>
    <string name="register_login">Login</string>
    <!--Forgot password-->
    <string name="forgot_title">Reimposta password</string>
    <string name="forgot_button">Reset password</string>
    <!-- Settings -->
    <string name="notification_header">Notifiche</string>
    <string name="curiosity_header">Curiosità</string>
    <!--Settings_notification-->
    <string name="notification_permission">Abilita le notifiche</string>
    <string name="notification_frequency">Frequenza di arrivo delle notifiche</string>
    <!--Settings_curiosities-->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!--Curiosity+-->
    <string name="game_title">Curiosity +</string>
    <string name="game_exit">Esci</string>
    <string name="game_image_description">Immagine di una curiosità</string>
    <string name="game_green">La sapevo!</string>
    <string name="game_red">Ora la so!</string>
    <string name="game_image_start_description">Clicca per partire!</string>
    <string name="game_end_of_curiosities">Sembra che non ci siano più curiosità per te,
        riprova fra qualche update </string>
    <!--Statistiche-->
    <string name="stats_title">Statistiche</string>
    <string name="stats_general">Generali</string>
    <string name="stats_general_description">general</string>
    <string name="stats_known">Sapute</string>
    <string name="stats_known_description">known</string>
    <string name="stats_unknown">Non sapute</string>
    <string name="stats_unknown_description">unknown</string>
    <string name="stats_general_tv">Completamento:</string>
    <string name="stats_val_default">val/val</string>
    <string name="string_with_placeholders">%1$s - %2$d/%3$d</string>
</resources>