<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/notification_header"
        android:layout="@layout/preference_category"
        tools:ignore="PrivateResource">

        <!--EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" /-->

        <!--ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" /-->

        <SwitchPreferenceCompat
            app:key="notification"
            app:title="@string/notification_permission" />

        <ListPreference
            app:defaultValue="30 minuti"
            app:entries="@array/settings_notification_frequency_entries"
            app:entryValues="@array/settings_notification_frequency_values"
            app:key="frequency"
            app:title="@string/notification_frequency"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header"
        android:layout="@layout/preference_category"
        tools:ignore="PrivateResource">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>