<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_home"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_weight="70"
        app:srcCompat="@raw/mars_planet"
        android:contentDescription="@string/planet_description" />

        <TextView
            android:id="@+id/game_text"
            style="@style/customTextView"
            android:layout_marginBottom="20dp"
            android:text="@string/game_text" />

        <Button
            android:id="@+id/play"
            style="@style/customButton"
            android:text="@string/game_button_text" />

</LinearLayout>