<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fgt_pass_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="36dp"
    android:paddingTop="48dp"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/forgot_title"
        android:fontFamily="sans-serif-medium"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:layout_marginTop="48dp"
        android:hint="@string/register_email"
        android:fontFamily="sans-serif-light"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:layout_marginHorizontal="12dp"/>

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:text="@string/forgot_button"
        android:fontFamily="sans-serif-medium"
        android:layout_marginHorizontal="12dp"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="invisible"
        android:layout_marginTop="48dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>